# lpquant

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CODEX.md  README.md  README.zh.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/web/messages/: en.json  zh.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/context/: recommend-context.tsx
apps/web/src/hooks/: use-form-state.ts  use-pools.ts  use-recommend.ts
apps/web/src/lib/: aggregator.ts  binance.ts  birdeye.ts  build-insight.ts  cache.ts  cetus-kline.ts  cetus.ts  constants.ts  env.ts  kline-source.ts  llm-prompt.ts  quant-client.ts  tokens.ts  types.ts
apps/web/src/shims/: mysten-graphql-latest.ts
nginx/: nginx.conf
nginx/conf.d/: default.conf
prompts/: 0.md  1.md  2.md
scripts/: init-ssl.sh
services/cetus-indexer/: .gitignore  pyproject.toml
services/cetus-indexer/cetus_indexer/: cli.py  config.py  db.py  event_parser.py  graphql_client.py  ohlcv.py  poller.py
services/cetus-indexer/tests/: test_db.py  test_event_parser.py  test_ohlcv.py
services/quant/: .dockerignore  Dockerfile  pyproject.toml
services/quant/app/: config.py  main.py  schemas.py
services/quant/app/engine/: backtest.py  candidates.py  scoring.py  tick_math.py  volatility.py
services/quant/app/routers/: recommend.py
services/quant/tests/: test_candidates_v2.py  test_volatility.py
(+39 files in other folders)
